[add] update Claude API model & create report doc